app/styles/app.scss
/* ... */
.chat_area .admin_chat .chat-body1 {
  margin-left: 0;
  margin-right: 50px;
}

.chat_area li:last-child {
  padding-bottom: 10px;
}

.chat_area li {
  border-bottom: 1px dotted #a59a9a;
  padding: 10px !important;
}

.message_write {
  background: #f5f3f3 none repeat scroll 0 0;
  float: left;
  padding: 15px;
  width: 100%;
  margin-bottom: 30px;
}

.chat_time {
  font-size: 10px;
}

.chat_time .material-icons {
  font-size: 14px;
}

.message_write textarea.form-control {
  height: 50px;
  padding: 5px;
  border: 1px solid lightgray;
}

.chat_sender {
  font-weight: bold;
  font-size: 12px;
}

.chat_bottom {
  float: left;
  margin-top: 13px;
  width: 100%;
}

.sub_menu_ > li a, .sub_menu_ > li {
  float: left;
  width: 100%;
}

.member_list li:hover {
  background: #428bca none repeat scroll 0 0;
  color: #fff;
  cursor: pointer;
}

.mid-page {
  text-align: center;
  margin-top: 300px;
}

// Small Chat
#Smallchat, #Smallchat * {
  right: unset !important;
  left: 0px !important;
}

.countdown-timer-container {
  &, .card {
    padding: 1em;
  }
}

@media (max-width: 767px) {
  .block-header {
    margin-top: 46px;
  }

  .header-right-section {
    width: 100%
  }

  .header-right-section .breadcrumbs {
    float: left
  }

  .header-right-section .logout {
    float: right;
    text-align: right;
    margin-top: -10px
  }

  .header-right-section .logout li {
    display: inline-block
  }

  .header-right-section li {
    vertical-align: top !important
  }
}

.back-button {
  border: none;
  border-radius: 21px;
  padding: 8px;
  margin-bottom: 10px;
}

.problem-result {
  height: 20px;
  width: 20px;
  position: absolute;
  top: 2px;
  right: 2px;
}

.bars {
  opacity: 1 !important;
}

.wrapper {
  height: 100vh;
  width: 100%;
  background: #2e3d49;
}

.mid-page-align {
  text-align: center;
  width: auto;
  height: 100px;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
}

.leaderboard-generate-scroll-y {
  max-height: 450px;
  overflow-y: scroll;
}

.overflow-description {
  display: none;
  margin: 0px 20px 0px 20px;
}

/* THEME UPDATE */
.color-bg, .n-top {
  background: #455a64 !important;
}

.bars {
  background: none !important;
  .bar1 {
    background: #fff !important;
  }
}

.row {
  margin-bottom: 20px;
}

.card {
  border-radius: 3px;
  box-shadow: none;
  .header {
    background: none !important;
  }
}

.section-card {
  border: none;
}

.hover-card {
  box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, .15);
  transition: all .3s ease;
  margin-bottom: 30px !important;
}

.hover-card:hover {
  box-shadow: 0 4px 8px 0 rgba(46, 61, 73, .12);
}

.img-overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  width: 100%;
  transition: .5s ease;
  height: 150px;
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
}

.problem-img-overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  width: 100%;
  transition: .5s ease;
  height: 105px;
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
}

.problem-image-wrapper img {
  height: 100px !important;
  min-height: 100px !important;
}

.problem-name-wrapper {
  height: 46px !important;
}

.problemCardWrapper:nth-of-type(6n+1) .problem-img-overlay {
  background-color: rgba(169, 81, 237, .7);
}

.problemCardWrapper:nth-of-type(6n+4) .problem-img-overlay {
  background-color: rgba(255, 162, 52, .7);
}

.problemCardWrapper:nth-of-type(6n+2) .problem-img-overlay {
  background-color: rgba(255, 84, 131, .7);
}

.problemCardWrapper:nth-of-type(6n+3) .problem-img-overlay {
  background-color: rgba(2, 179, 228, .7);
}

.problemCardWrapper:nth-of-type(6n+5) .problem-img-overlay {
  background-color: rgba(169, 81, 237, .7);
}

.problemCardWrapper:nth-of-type(6n+1) .problem-img-overlay {
  background-color: rgba(2, 204, 186, .7);
}

.problemCardWrapper:nth-of-type(6n+6) .problem-img-overlay {
  background-color: rgba(125, 151, 173, .7);
}

.contestCardWrapper:nth-of-type(6n+1) .contestCard .img-overlay {
  background-color: rgba(255, 162, 52, .7);
}

.contestCardWrapper:nth-of-type(6n+2) .contestCard .img-overlay {
  background-color: rgba(255, 84, 131, .7);
}

.contestCardWrapper:nth-of-type(6n+3) .contestCard .img-overlay {
  background-color: rgba(2, 179, 228, .7);
}

.contestCardWrapper:nth-of-type(6n+4) .contestCard .img-overlay {
  background-color: rgba(169, 81, 237, .7);
}

.contestCardWrapper:nth-of-type(6n+5) .contestCard .img-overlay {
  background-color: rgba(2, 204, 186, .7);
}

.contestCardWrapper:nth-of-type(6n+6) .contestCard .img-overlay {
  background-color: rgba(125, 151, 173, .7);
}

a:hover, a:focus {
  text-decoration: none !important;
}

.sidebar .menu {
  background: #455a64;
}

.n-top.blur-bg {
  z-index: 1000;
  background: rgba(0, 0, 0, 1) !important;
  -webkit-filter: blur(20px);
  -moz-filter: blur(20px);
  -o-filter: blur(20px);
  -ms-filter: blur(20px);
  filter: blur(20px);
  transition: all .3s ease;
}

.sidebar .menu .list a, .sidebar .menu .list a span {
  color: #eceff1;
}

.sidebar .menu .list li.active {
  background: #fc4f4f !important;
}

.timeLeft {
  display: inline-block;
  width: 33%;
  font-size: 14px !important;
  color: #333 !important;
  background: none !important;
}

.text-col-two {
  display: inline-block;
  width: 30%;
  font-size: 14px !important;
  color: #333 !important;
  background: none !important;
  top: 30%;
  transform: translateY(-30%);
}

.caption p {
  font-size: 14px !important;
  color: #333 !important;
  word-wrap: break-word;
  max-width: 100%;
  overflow: hidden;
}

.big-digit {
  font-size: 32px !important;
}

.big-alpha {
  font-size: 15px !important;
  text-transform: uppercase;
  color: #333 !important;
}

.contestCard {
  height: 425px !important;
}

hr {
  margin-bottom: 10px !important;
  margin-top: 10px !important;
}

@media (max-width: 355px) {
  .big-alpha {
    font-size: 13px !important;
  }
  .mintxt {
    font-size: 12px !important;
  }
}
/* ... */

